# bio

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_daily.bat  setup_scheduled_task.ps1  setup_server.sh  代码更新检查清单.txt  快速设置定时任务.txt  运行命令.txt  项目文件清理计划.md
app/: __init__.py  __main__.py  api.py  cli.py  config.py  deduplication.py  filtering.py  logging.py  models.py  ranking.py  scoring.py
backend/: __init__.py  __main__.py  cli.py
docker/: Dockerfile  docker-compose.yml
docs/: ACCESS_GUIDE.md  DeepSeek_API调用逻辑分析.md  README_定时任务设置.md  REMOTE_ACCESS.md  UPDATE_CHECKLIST.md  UPDATE_GUIDE.md  UPDATE_VISUAL_GUIDE.md  deploy.md  optimization.md  不相关论文筛选问题分析.md  不相关论文过滤机制说明.md  代码更新指南.md  代码更新注意事项.md  代码更新速查表.md  优化改进计划.md  关于代码更新的注意事项.md  如何访问.md  常见更新场景快速指南.md  当前需要优化的点总结.md  数据源覆盖率分析.md  日志与报告对比分析.md  服务器更新指南.md  服务器部署指南.md  每天8点30推送场景下的检索窗口分析.md  生产环境代码更新指南.md  部署调整清单.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
reports/: 生化领域突破汇总_20251228.txt  生化领域突破汇总_20251229.txt  生化领域突破汇总_20251230.txt
scripts/: check_all.sh  check_deployment.py  check_python.sh  check_status.sh  check_update_safety.sh  clear_database.py  deploy.sh  deploy_server.sh  diagnose_llm.py  migrate_legacy_data.py  restart.sh  restart_all.sh  start.sh  start_all.sh  start_frontend.sh  stop.sh  stop_frontend.sh  update_server.sh
tests/: README.md  run_tests.py  test_api_connection.py  test_batch_processing.py  test_cli_batch_logic.py  test_deduplication.py  test_rss_doi_extraction.py  (+1 more)
(+110 files in other folders)
